--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,57 +1,58 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Title</title>
+    <title>TATE Fan Page</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- CSS -->
+    <link href="../css/index.css" rel="stylesheet">
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:700|Abel" rel="stylesheet">
+
 </head>
 
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-            <a class="nav-link" href="#about">The Band</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#services">Albums</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#contact">Comment</a>
-            </li>
-        </ul>
+            <div class="container">
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                    <a class="nav-link text-white" href="#about">The Band</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link text-white" href="#services">Albums</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link text-white" href="#contact">Comment</a>
+                    </li>
+                </ul>
+            </div>
+        </div> 
+    </nav>
+    <!-- Header Image and Title -->
+    <div class="hero-image">
+        <div class="hero-text">
+            <div class="text-uppercase">The<br>Airborne<br>Toxic<br>Event</div>
         </div>
     </div>
-    </nav>
 
-    <!-- HEADER -->
-    <header class="masthead text-center text-black d-flex" style="background-color: orange" >
-        <div class="container my-auto">
-            <div class="row">
-                <div class="col-lg-10 mx-auto">
-                    <h1 class="text-uppercase">
-                    <strong>The Airborne Toxic Event</strong>
-                </div>
-            </div>
-        </div>
-    </header>
 
     <!-- Grey Box Section for Some Constrast -->
-    <section class="bg-dark text-white">
+    <!-- <section class="bg-dark text-white">
         <div class="container text-center">
             <h2 class="mb-4">This is a text box</h2>
             <p>Text box for a dark grey box with some white writing in it</p>
         </div>
-    </section>
+    </section> -->
 
     
 
